TheKabal (19 May 2013)
--------------------------------------
Fix BntSchema so that it returns an array only (no direct output)
Fix Create universe output function table_row & table_row_xml to correctly show the full error message on rows with errors (table title row was incorrectly using double quotes which broke html)
Begin converting Create Universe to use translated text.
Fix BntFile so that in Create Universe on step 5, it imports the registry correctly. The DB is set to active (but empty) at that point.

TheKabal (18 May 2013)
--------------------------------------
Switch all instances of Select with a limit clause to use adodb's SelectLimit
PostgreSQL's adodb driver doesn't support logging (yet), so disable logging (even in dev mode) if the property doesn't exist.
When the database was active, the registry ($config_values, generally) was not being populated (fixed).

TheKabal (13 May 2013)
--------------------------------------
BntFile was incorrectly reporting its error status, and the config file had booleans, which BntFile was not importing correctly. Switched them to 0/1 for false/true, which now work correctly.
Game config's schema had a column for description, but it was not used, and was set to not null, which caused errors
Scheduler "repeate" changed to "repeat" for clarity
Create universe cleanup including removing some debug code, making comment style consistent, fixing some indention levels, etc.
Create universe - switch random to use adodb's $db->random, which is more portal than our temporary fix
Create universe - switch timestamp code to use now() from php instead, which offloads work to php and is more portable
Create universe - improve SQL calls to use column names in more places, omit un-needed/default settings in sql calls, and make debugging slightly easier
Create universe - Add new variables for Game Admin name, ship name, and zone name (and use them during CU)