@@ -1,5 +1,9 @@
 TheKabal (19 May 2013)
 --------------------------------------
+Create Universe step 5 & 6 translation
+
+TheKabal (19 May 2013)
+--------------------------------------
 Fix BntSchema so that it returns an array only (no direct output)
 Fix Create universe output function table_row & table_row_xml to correctly show the full error message on rows with errors (table title row was incorrectly using double quotes which broke html)
 Begin converting Create Universe to use translated text.
